# Dicom-Image-Converter

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: imgproc.cpp.52AAD05C8BF9C6FE.idx  imgproc.h.6AFE51810C30F126.idx  main.cpp.2A4085A65F7D1BB3.idx  mainwindow.cpp.3EED5D407DB06F7B.idx  mainwindow.h.139DFEA3F02CEA51.idx
ImageProc/: CMakeLists.txt
ImageProc/src/ImageProc/: imgproc.cpp  imgproc.ui
ImageProc/src/ImageProc/header/: imgproc.h  imgproc.hpp
MainWindow/: CMakeLists.txt
MainWindow/src/MainWindow/: mainwindow.cpp  mainwindow.ui
MainWindow/src/MainWindow/header/: mainwindow.h
mainExecute/: CMakeLists.txt  main.cpp
resDcm/: 1-001.dcm  1-002.dcm  1-003.dcm  1-004.dcm  1-005.dcm  1-006.dcm  1-007.dcm  1-008.dcm  1-009.dcm  1-012.dcm  1-013.dcm  1-014.dcm  1-015.dcm  1-016.dcm  1-017.dcm  1-018.dcm  1-019.dcm  1-020.dcm  1-023.dcm  1-024.dcm  1-025.dcm  1-026.dcm  1-027.dcm  1-028.dcm  1-029.dcm  1-030.dcm  1-031.dcm  1-034.dcm  1-035.dcm  1-036.dcm  1-037.dcm  1-038.dcm  1-039.dcm  1-040.dcm  1-041.dcm  1-042.dcm  1-045.dcm  1-046.dcm  1-047.dcm  1-048.dcm  (+73 more)
